# Static-Object-Segmentation-Classification

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: config.rviz
static_object_segmentation_classification/: static_object_classification_node.py  static_object_segmentation_node.py  subpub.py
test/: 2022-02-17-18-06-21_ground_truth.txt  2022-02-17-18-06-21_results.txt  2022-02-17-18-13-23_ground_truth.txt  2022-02-17-18-13-23_results.txt  results.txt  validation.py
